# NuMPI

./: .gitattributes  .gitignore  .travis.before_install.bash  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog.md  LBFGS_Matrix_H.py  LICENSE.md  MANIFEST.in  MPI_testrunner.py  NEMO_test_job.sh  README.md  env.sh  pyproject.toml  pytest.ini  requirements.txt  run-tests.py  run-tests.sh  setup.cfg  setup.py
MPITools/: MPIStub.py  __init__.py
NuMPI/: MPIStub.py  __init__.py  _version.py
PyLBFGS/: MPI_LBFGS_Matrix_H.py  Wolfe.py  __init__.py
PyLBGFS/: LBFGS_Matrix_H.py  MPI_LBFGS_Matrix_H.py
Tools/: ParallelNumpy.py  __init__.py
helpers/: LBFGS_Matrix_H_Verbose.py  LBFGS_Matrix_Hk_Opt1.ipynb  LBGFS_Matrix_Hk.ipynb  LBGFS_iterative<.ipynb  Numpy Matrix Operations.ipynb  copyright.py  debug_compare_lbfgs_implementations_evaluations.py  debug_compare_two_LBFGS_implementations.py  learn_scipy_linesearch.py  line_profiing_LBFGSB.ipynb  memoryprofiling_LBFGS.py  minimization_problems.py  nb_fevals_scipy_vs_numpy.py  plot_helpers.py  profile_Rosenbrock.py  replace_header.py  timing basic numpy operations.ipynb  update_license_headers.sh
maintenance/: copyright.py  replace_header.py  update_license_headers.sh
test/: __init__.py  conftest.py
tests/: MPI_FileIO_Test.py  MPI_minimization_problems.py  __init__.py  conftest.py  minimization_problems.py  show_parallel_speedup.py  test_LBFGS_interface.py  test_LBFGS_minimization_problems.py  test_MPI_LBFGS.py  test_ParallelNumpy.py  test_io.py  test_minimization_problemns.py  test_minimization_problems.py  (+3 more)
(+78 files in other folders)
