[build-system]
requires = ["flit_core>=3.2", "numpy>1.15.0", "DiscoverVersion"]
build-backend = "flit_core.buildapi"

[project]
name = "NuMPI"
description = "Numerical tools for MPI-parallelized code"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Antoine Sanner", email = "antoine.sanner@imtek.uni-freiburg.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
requires-python = ">=3.8.0"
dynamic = ["version"]
dependencies = [
    "DiscoverVersion",
    "scipy>1.1.0"
]

[project.optional-dependencies]
mpi = [
    "mpi4py"
]
test = [
    "flake8<5",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "primefac"
]

[project.urls]
repository = "https://github.com/IMTEK-Simulation/NuMPI"
changelog = "https://github.com/IMTEK-Simulation/NuMPI/blob/master/ChangeLog.md"
